--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
+    "motion": "^12.4.7",
     "next": "15.2.1-canary.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
